--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,8 @@
 			rel="stylesheet"
 		/>
 		<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=block" rel="stylesheet" />
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
