--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,10 @@
 			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=block"
 			rel="stylesheet"
 		/>
-		<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=block" rel="stylesheet" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Audiowide&display=block"
+			rel="stylesheet"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
